--- a/index.html
+++ b/index.html
@@ -4,12 +4,48 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Rinterio</title>
+  <link rel="stylesheet" href="style.css">
   <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css" rel="stylesheet" type="text/css" />
 <script src="https://cdn.tailwindcss.com"></script>
+<script src="https://kit.fontawesome.com/eaa45f3f5b.js" crossorigin="anonymous"></script>
+
 
 </head>
-<body>
+<body class="">
   <header>
+
+    <nav class="container mx-auto m-10 px-6 nav">
+      <div class="flex justify-between items-center">
+        <div class="flex gap-2 items-center font-bold">
+          <div class="w-10 h-10 rounded-full bg-[#ABEF5F] text-center p-2">
+            <i class="fa-solid fa-arrow-right -rotate-45"></i>
+          </div>
+          <h1 class="text-3xl font-semibold">Rinterio</h1>
+        </div>
+        <div class="lg:flex hidden space-x-4 list-none">
+          <li><a href="">Home</a></li>
+          <li><a href="">Services</a></li>
+          <li><a href="">Portfolio</a></li>
+          <li><a href=""></a>Contact Us</li>
+        </div>
+        <div class="lg:flex gap-4 rounded-full px-4 py-2 bg-[#ABEF5F] text-center hidden">
+          <button class="text-center">Book Consultant</button>
+          <div class="w-10 h-10 rounded-full bg-black text-center text-white p-2">
+            <i class="fa-solid fa-arrow-right -rotate-45"></i>
+          </div>
+        </div>
+        <div class="lg:hidden text-3xl w-10 h-10 rounded-full bg-white">
+          <i class="fa-solid fa-bars"></i>
+        </div>
+      </div>
+      
+    </nav>
+
+
+
+
+   
+      
 
   </header>
   <main>
