forgotten to add search and cart icon. but now added with responsive

--- a/index.html
+++ b/index.html
@@ -26,12 +26,21 @@
           <li><a href="">Home</a></li>
           <li><a href="">Services</a></li>
           <li><a href="">Portfolio</a></li>
+          <li><a href="">Blogs</a></li>
           <li><a href=""></a>Contact Us</li>
         </div>
-        <div class="lg:flex gap-4 rounded-full px-4 py-2 bg-[#ABEF5F] text-center hidden">
-          <button class="text-center">Book Consultant</button>
-          <div class="w-10 h-10 rounded-full bg-black text-center text-white p-2">
-            <i class="fa-solid fa-arrow-right -rotate-45"></i>
+        <div class="flex space-x-4 items-center justify-center">
+          <div class="text-3xl hidden lg:flex w-10 h-10 rounded-full bg-white">
+            <i class="fa-solid fa-magnifying-glass"></i>
+          </div>
+          <div class="text-3xl hidden lg:flex w-10 h-10 rounded-full bg-white">
+            <i class="fa-solid fa-cart-shopping"></i>
+          </div>
+          <div class="lg:flex gap-4 rounded-full px-4 py-2 bg-[#ABEF5F] text-center hidden">
+            <button class="text-center">Book Consultant</button>
+            <div class="w-10 h-10 rounded-full bg-black text-center text-white p-2">
+              <i class="fa-solid fa-arrow-right -rotate-45"></i>
+            </div>
           </div>
         </div>
         <div class="lg:hidden text-3xl w-10 h-10 rounded-full bg-white">
