styled navbar menu items

--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
           <h1 class="text-3xl font-semibold">Rinterio</h1>
         </div>
         <div class="lg:flex hidden space-x-4 list-none">
-          <li><a href="">Home</a></li>
-          <li><a href="">Services</a></li>
-          <li><a href="">Portfolio</a></li>
-          <li><a href="">Blogs</a></li>
-          <li><a href=""></a>Contact Us</li>
+          <li><a href="" class="hover:text-[#ABEF5F] hover:text-xl hover:font-bold]">Home</a></li>
+          <li><a href="" class="hover:text-[#ABEF5F] hover:text-xl hover:font-bold]">Services</a></li>
+          <li><a href="" class="hover:text-[#ABEF5F] hover:text-xl hover:font-bold]">Portfolio</a></li>
+          <li><a href="" class="hover:text-[#ABEF5F] hover:text-xl hover:font-bold]">Blogs</a></li>
+          <li><a href="" class="hover:text-[#ABEF5F] hover:text-xl hover:font-bold]">Contact Us</a></li>
         </div>
         <div class="flex space-x-4 items-center justify-center">
           <div class="text-3xl hidden lg:flex w-10 h-10 rounded-full bg-white">
@@ -49,12 +49,6 @@
       </div>
       
     </nav>
-
-
-
-
-   
-      
 
   </header>
   <main>
