--- a/index.html
+++ b/index.html
@@ -8,11 +8,20 @@
   <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css" rel="stylesheet" type="text/css" />
 <script src="https://cdn.tailwindcss.com"></script>
 <script src="https://kit.fontawesome.com/eaa45f3f5b.js" crossorigin="anonymous"></script>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet">
+<style>
+  body{
+    font-family: "Manrope", sans-serif;
+  }
+</style>
 
 
 </head>
 <body class="">
-  <header>
+  <header style="rgb(255, 255, 255)
+rgba(255, 255, 255, 0);">
 
     <nav class="container mx-auto m-10 px-6 nav">
       <div class="flex justify-between items-center">
@@ -49,6 +58,24 @@
       </div>
       
     </nav>
+    <section class="container mx-auto space-y-6 px-6">
+      <div class="flex justify-center items-center">
+        <img src="./assets/banner.png" class="w-[80%]" alt="">
+      </div>
+      <div class="text-center space-y-4">
+        <h2 class="text-4xl font-semibold">
+          A barn house of this design has a <br> striking appearance
+        </h2>
+        <p class="opacity-80">we specialize in innovative building design solutions that bring your ideas to life. Whether you're planning a residential, commercial, or industrial project, our team of expert architects and designers is here to guide you every step of the way. 
+
+        </p>
+        <button class="w-full lg:w-auto rounded-full bg-[#ABEF5F80] text-black text-xl font-semibold px-6 py-2 flex justify-center items-center mx-auto">View Details
+          <div class="lg:w-8 h-8 rounded-full bg-[#ABEF5F] text-center p-1 ml-4">
+            <i class="fa-solid fa-arrow-right -rotate-45"></i>
+          </div>
+        </button>
+      </div>
+    </section>
 
   </header>
   <main>
