we design thoughtful section done with responsive

--- a/index.html
+++ b/index.html
@@ -58,6 +58,8 @@ rgba(255, 255, 255, 0);">
       </div>
       
     </nav>
+
+    <!-- banner section -->
     <section class="container mx-auto space-y-6 px-6">
       <div class="flex justify-center items-center">
         <img src="./assets/banner.png" class="w-[80%]" alt="">
@@ -79,6 +81,64 @@ rgba(255, 255, 255, 0);">
 
   </header>
   <main>
+    <section style="
+background: #E9E9E9;">
+    <div class="container mx-auto my-10" >
+
+      <div class="hidden lg:flex justify-start items-start pt-10">
+        <img src="./assets/Vector.png" alt="">
+  
+       </div>
+  
+       <div class="flex flex-col lg:flex-row justify-between items-center gap-4 py-10 px-6 space-y-6">
+
+        <!-- thoughtful design part -->
+        <div class="flex-1 space-y-10">
+          <div class="text-center lg:text-start">
+            <button class="bg-[#FFFFFF] rounded-full px-4 py-2">
+              <i class="fa-solid fa-arrow-right rotate-30 mr-2"></i>About Us</button>
+          </div>
+          <div class="space-y-10 text-center lg:text-start">
+            <h2 class="text-3xl font-semibold">We design thoughtful, <br>
+               liveable spaces</h2>
+            <p class="opacity-80">Our philosophy centers around creating spaces that are not only visually stunning but also highly functional and comfortable. We believe in designing environments that enhance the quality of life, seamlessly blending aesthetics with practicality.</p>
+          </div>
+          <div class="flex space-x-4 bg-[#FFFFFF] my-6 p-6 rounded-xl justify-center items-center space-y-4 ">
+            <div>
+              <img class="w-32 h-16" src="./assets/commercial.png" alt="">
+            </div>
+            <div>
+              <h5 class="text-xl font-semibold">
+                Commercial
+              </h5>
+              <p class="text-extralight opacity-80">
+
+Innovative commercial spaces designed for productivity and impact, blending modern aesthetics with practical functionality to elevate your business.
+              </p>
+            </div>
+
+          </div>
+          <div class="flex space-x-4 bg-[#FFFFFF] my-6 p-6 rounded-xl justify-center items-center">
+            <div>
+              <img src="./assets/residential.png" alt="">
+            </div>
+            <div class="pb-4">
+              <h5 class="text-xl font-semibold">Residential</h5>
+              <p class="opacity-80">
+                The barn house captivates with its blend of rustic charm and modern.
+              </p>
+            </div>
+          </div>
+
+        </div>
+
+        <!-- thoughtful image -->
+        <div class="flex-1 space-y-2">
+          <img src="./assets/Rectangle.png" alt="">
+        </div>
+       </div>
+    </div>
+    </section>
 
   </main>
   <footer>
