--- a/index.html
+++ b/index.html
@@ -595,29 +595,23 @@ Ready to bring your next project to life? Let’s discuss your vision and explor
   </div>
  </div>
  
- <div class="flex flex-col lg:flex-row p-4 container w-full justify-center items-center mx-auto border-2 border-red-600">
+<div class="grid grid-cols-1 lg:grid-cols-2 gap-4 p-4 w-[100%] lg:w-[80%] justify-center items-center mx-auto">
+  <input type="text" placeholder="First Name*" class="input input-bordered w-[100%] lg:p-8 p-10 rounded-full text-3xl lg:text-xl" />
+  <input type="text" placeholder="Last Name*" class="input input-bordered w-[100%] lg:p-8 p-10 rounded-full text-3xl lg:text-xl" />
+  <input type="text" placeholder="Phone Number*" class="input input-bordered w-[100%] lg:p-8 p-10 rounded-full text-3xl lg:text-xl" />
+  <input type="text" placeholder="Email Number*" class="input input-bordered w-[100%] lg:p-8 p-10 rounded-full text-3xl lg:text-xl" />
 
-  <div class="flex flex-col w-full lg:w-[70%] mx-auto lg:flex-row justify-center items-center space-y-4 text-center">
+</div>
+<div class="w-[100%] lg:w-[80%] mx-auto rounded-3xl container p-4">
+  <textarea class="textarea textarea-bordered textarea-lg text-3xl lg:text-xl rounded-3xl w-[100%] h-[150px] lg:h-[200px]" placeholder="Write your message here"></textarea>
+ </div> 
 
-    <input type="text" placeholder="First Name*" class="input input-bordered rounded-full w-full lg:w-[50%] p-10" />
-
-    <input type="text" placeholder="Last Name*" class="input input-bordered rounded-full w-full lg:w-[50%] p-10" />
-
-    <input type="text" placeholder="Phone Number*" class="input input-bordered rounded-full w-full lg:w-[50%] p-10" />
-    <input type="text" placeholder="Email Number*" class="input input-bordered rounded-full w-full lg:w-[50%] p-10" />
-   </div>
-
-  
-  
-   
-  
-   <div class="flex flex-col border-2 border-red-600 lg:flex-row mx-auto w-full lg:w-[70%] p-2">
-    <textarea
-    placeholder="Write your message here"
-    class="textarea textarea-bordered rounded-3xl w-full h-[150px]"></textarea>
-   
-   </div>
- </div>
+ <div class="p-4 flex lg:flex justify-center items-center lg:w-[80%] w-[100%] mx-auto container gap-4 rounded-full bg-[#ABEF5F] text-center">
+  <button class="text-center lg:text-xl text-3xl">Send Mail</button>
+  <div class="w-10 h-10 rounded-full bg-black text-center text-white p-2">
+    <i class="fa-solid fa-arrow-right -rotate-45"></i>
+  </div>
+</div>
 
 
 
